<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.dbondarenko.shpp.personalnotes.fragments.NotesListFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewNotesList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/default_margin"
        app:backgroundTint="@color/colorPrimary"
        app:srcCompat="@mipmap/ic_action_add_note"/>

    <ProgressBar
        android:id="@+id/progressBarNotesLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textViewNoNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_no_notes"
        android:textSize="@dimen/big_text_size"
        android:textStyle="bold"
        android:visibility="gone"/>
</FrameLayout>
